<?xml version="1.0" encoding="utf-8"?>

   <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SmoothAnxietyMainActivity"
        tools:deviceIds="wear">

   <ImageView
       android:id="@+id/imageView"
       android:layout_width="206dp"
       android:layout_height="117dp"
       android:layout_marginStart="10dp"
       android:layout_marginTop="6dp"
       android:layout_marginEnd="10dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:srcCompat="@drawable/stress_level"
       android:contentDescription="@string/_null" />

   <ImageButton
       android:id="@+id/image_btn"
       style="@style/Widget.AppCompat.ImageButton"
       android:layout_width="48dp"
       android:layout_height="48dp"
       android:layout_marginStart="92dp"
       android:layout_marginEnd="93dp"
       android:contentDescription="@string/image"
       android:elevation="1dp"
       android:visibility="visible"
       app:layout_constraintBottom_toTopOf="@+id/heartrate_label"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:srcCompat="@drawable/ic_heart"
       tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

   <TextView
       android:id="@+id/timeView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="52dp"
       android:hint="@string/text_00_00"
       android:textSize="22sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.497"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="@+id/imageView" />

   <TextView
       android:id="@+id/heartrate_label"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginEnd="83dp"
       android:layout_marginBottom="16dp"
       android:text="@string/heartrate_text"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent" />

   <!-- Views to show when heart rate is not available on the device. -->

   <ImageView
       android:id="@+id/broken_heart"
       android:layout_width="39dp"
       android:layout_height="39dp"
       android:layout_marginBottom="7dp"
       android:contentDescription="@null"
       android:src="@drawable/ic_broken_heart"
       android:visibility="gone"
       app:layout_constraintBottom_toTopOf="@+id/heartrate_label"
       app:layout_constraintHorizontal_bias="0.497"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent" />

   <TextView
       android:id="@+id/not_available"
       android:layout_width="212dp"
       android:layout_height="23dp"
       android:layout_marginStart="5dp"
       android:layout_marginEnd="10dp"
       android:gravity="center_horizontal"
       android:text="@string/heart_rate_not_available"
       android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
       android:visibility="gone"
       app:layout_constraintBottom_toTopOf="@+id/image_btn"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>
